# event-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  go.mod  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-build-publish.yml
alembic/: env.py
alembic/versions/: 11e1606af08c_remove_classification_tables_and_fields.py  397053ced128_create_rss_posts_table.py  7fbaf00cc52f_create_events_table.py  8852fda0d953_add_is_published_field_to_rss_posts.py  b52b9c7d4e9e_create_openai_request_logs_table.py  fe1255139807_create_telegram_channels.py
batch_data/: batch_request_20260117_185250.jsonl
cmd/: main.go
internal/models/: telegram.go
internal/telegram/: content.go  content_test.go  models.go  telegram.go
internal/telegram/channel/: content.go  content_test.go  telegram.go
pkg/rss/: models.go  parser.go  parser_test.go
src/common/: __init__.py
src/common/db/: __init__.py  models.py  repository.py
src/common/utils/: __init__.py
src/digest_publisher/: __init__.py  __main__.py  config.py
src/event_classifier/: __main__.py  batch_processor.py  config.py  test_logging.py  worker.py
src/feed/: __init__.py  __main__.py  cli.py
src/pipeline/: __init__.py  __main__.py  config.py  orchestrator.py
src/rss_parser/: __main__.py  cli.py  manager.py
src/rss_reader/: __init__.py  __main__.py
src/summarizer/: __init__.py  __main__.py
tests/: conftest.py  test_database.py  test_html_cleaning.py  test_parser.py
tests/fixtures/: centralbank_russia.xml
(+23 files in other folders)
